tests/semantic_errors/andrei30_3.tl
require "ifj21"

global name : function (integer) : string, string, string
function name    (a : integer, a : integer) : string, string, string end

function main()
    local id : integer = 102
    while 1 do
        while 1 do
            while 1 do
                while 1 do
                    id = 90
                    local num : string = "HAHA"
                end
            end
        end
        num = "ERR?"
    end

end

main()
